this is my change

--- a/WebApplication1/Views/Shared/_AdminLayout.cshtml
+++ b/WebApplication1/Views/Shared/_AdminLayout.cshtml
@@ -26,10 +26,13 @@
                             <a class="nav-link" href="@Url.Action("Index","AdminPanel")">All Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Orders</a>
+                            <a class="nav-link" href="@Url.Action("AllOrders","AdminPanel")">Orders</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Customers</a>
+                            <a class="nav-link" href="@Url.Action("AllCustomers","AdminPanel")">Customers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("ShowAll","AdminPanel")">Appoinments</a>
                         </li>
                     </ul>
                 </div>
