--- a/WebApplication1/Views/AdminPanel/Index.cshtml
+++ b/WebApplication1/Views/AdminPanel/Index.cshtml
@@ -7,14 +7,14 @@
     <table class="table table-responsive table-striped table-bordered" style="width:100%">
         <tbody>
                 <tr>
-                    <td><h5>ID</h5></td>
-                    <td><h5>Name</h5></td>
-                    <td><h5>Price</h5></td>
-                    <td><h5>DiscountedPrice</h5></td>
-                    <td><h5>Quantity</h5></td>
-                    <td><h5>Image</h5></td>
-                    <td><h5>Edit</h5></td>
-                    <td><h5>Remove</h5></td>
+                    <th><h5>ID</h5></th>
+                    <th><h5>Name</h5></th>
+                    <th><h5>Price</h5></th>
+                    <th><h5>DiscountedPrice</h5></th>
+                    <th><h5>Quantity</h5></th>
+                    <th><h5>Image</h5></th>
+                    <th><h5>Edit</h5></th>
+                    <th><h5>Remove</h5></th>
                 </tr>
 
                 @foreach (var p in Model)
