--- a/WebApplication1/Views/Shared/Layout2.cshtml
+++ b/WebApplication1/Views/Shared/Layout2.cshtml
@@ -49,11 +49,19 @@
                     </li>
                 </ul>
 
+                <!-- Profile Icon -->
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="Identity/Account/Login">Login</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="profile-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fas fa-user"></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profile-dropdown">
+                            <a class="dropdown-item" href="Identity/Account/Login">Login</a>
+                            <a class="dropdown-item" href="Identity/Account/Register">Register</a>
+                            <a class="dropdown-item" href="@Url.Action("MyOrder", "Order")">My Orders</a>
+                            <a class="dropdown-item" href="Identity/Account/Logout">Logout</a>
+                        </div>
                     </li>
-
                 </ul>
 
                 <!-- Add to Cart Icon -->
@@ -71,8 +79,8 @@
                             </div>
                             <div class="cart-empty text-muted">Your cart is empty.</div>
                             <div class="cart-actions">
-                                <a href="@Url.Action("Cart", "Order")" class="btn btn-primary btn-sm">View Cart</a>
-                                <a href="@Url.Action("Cart", "Order")" class="btn btn-primary btn-sm">Checkout</a>
+                                <a href="@Url.Action("Cart", "Order")" class="btn btn-secondary btn-sm">View Cart</a>
+                                <a href="@Url.Action("Cart", "Order")" class="btn btn-secondary btn-sm">Checkout</a>
                             </div>
                         </div>
                     </li>
