--- a/WebApplication1/wwwroot/css/admin.css
+++ b/WebApplication1/wwwroot/css/admin.css
@@ -1,5 +1,6 @@
 body {
     background-color: #f5f5f5; /* Light grey background */
+
 }
 
 :root {
@@ -20,7 +21,7 @@ body {
     text-align: center;
     font-family: 'Times New Roman', Times, serif; /* Stylish font */
     font-style: italic;
-    color: white; /* Green color */
+    color: green; /* Green color */
     background-color: var(--clr-primary); /* Yellow background for title */
     padding: 10px; /* Add some padding */
     border-radius: 10px; /* Rounded corners */
@@ -39,7 +40,7 @@ body {
 .btn-login {
     background-color: var(--clr-primary); /* Yellow background */
     border-color: var(--clr-primary); /* Yellow border color */
-    color: white; /* Green text color */
+    color: green; /* Green text color */
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
     font-style: italic;
@@ -88,7 +89,7 @@ body {
     }
 
     .table th {
-        background-color: #4CAF50;
+        background-color: black;
         color: white;
     }
 
@@ -135,6 +136,10 @@ img {
 
 .navbar-brand {
     margin: 0 auto;
+    font-family:'Times New Roman', Times, serif;
+    font-style:italic;
+    font-weight:bolder;
+    font-size:larger;
 }
 
 .navbar-nav {
@@ -145,4 +150,25 @@ img {
     border-bottom: 2px solid #000; /* Adjust color and thickness as needed */
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+}
+
+/*all orders page*/
+h4 {
+font-style:italic;
+font-family:'Times New Roman', Times, serif;
+}
+
+/*ProductDetail*/
+
+.cart-container {
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Soft shadow */
+}
+
+
+.card-text {
+    font-weight: 200;
+    font-style: italic;
+    color: black;
 }
