--- a/WebApplication1/wwwroot/css/styles.css
+++ b/WebApplication1/wwwroot/css/styles.css
@@ -606,4 +606,29 @@ footer .top-bar i {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
+/*try it*/
 
+
+.navbar-nav .dropdown-toggle::after {
+    display: none;
+}
+
+.dropdown-menu.dropdown-menu-right {
+    right: 0;
+    left: auto;
+}
+
+    .dropdown-menu.dropdown-menu-right::before {
+        right: 12px;
+        left: auto;
+    }
+
+.dropdown-item {
+    font-size: 14px;
+    padding: 10px 20px;
+}
+
+    .dropdown-item:hover {
+        background-color: #f0f0f0;
+        color: #333;
+    }
