--- a/WebApplication1/Views/AdminPanel/ShowAll.cshtml
+++ b/WebApplication1/Views/AdminPanel/ShowAll.cshtml
@@ -10,15 +10,15 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Phone number</th>
-                    <th>Pet Type</th>
-                    <th>Preferred Date and Time</th>
-                    <th>Reason</th>
-                    <th>Accept</th>
-                    <th>Decline</th>
-                    <th>Done</th>
+                    <th><h5>ID</h5></th>
+                    <th><h5>Name</h5></th>
+                    <th><h5>Phone number</h5></th>
+                    <th><h5>Pet Type</h5></th>
+                    <th><h5>Preferred Date and Time</h5></th>
+                    <th><h5>Reason</h5></th>
+                    <th><h5>Accept</h5></th>
+                    <th><h5>Decline</h5></th>
+                    <th><h5>Done</h5></th>
                 </tr>
             </thead>
 
