--- a/WebApplication1/Views/Shared/Layout2.cshtml
+++ b/WebApplication1/Views/Shared/Layout2.cshtml
@@ -58,7 +58,7 @@
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profile-dropdown">
                             <a class="dropdown-item" href="Identity/Account/Login">Login</a>
                             <a class="dropdown-item" href="Identity/Account/Register">Register</a>
-                            <a class="dropdown-item" href="@Url.Action("MyOrder", "Order")">My Orders</a>
+                            <a class="dropdown-item" href="@Url.Action("MyOrder", "Home")">My Orders</a>
                             <a class="dropdown-item" href="Identity/Account/Logout">Logout</a>
                         </div>
                     </li>
