--- a/WebApplication1/wwwroot/css/admin.css
+++ b/WebApplication1/wwwroot/css/admin.css
@@ -90,7 +90,7 @@ body {
 
     .table th {
         background-color: black;
-        color: white;
+        color: green;
     }
 
 .container {
@@ -157,7 +157,10 @@ h4 {
 font-style:italic;
 font-family:'Times New Roman', Times, serif;
 }
-
+h5 {
+    font-style: italic;
+    font-family: 'Times New Roman', Times, serif;
+}
 /*ProductDetail*/
 
 .cart-container {
