--- a/WebApplication1/wwwroot/css/styles.css
+++ b/WebApplication1/wwwroot/css/styles.css
@@ -632,3 +632,52 @@ footer .top-bar i {
         background-color: #f0f0f0;
         color: #333;
     }
+
+
+
+    /*home/myorder page*/
+
+.table-responsive {
+    overflow-x: auto;
+}
+
+    .table-responsive table {
+        width: 100%;
+        min-width: 100%;
+    }
+
+    .table-responsive tbody {
+        overflow-x: auto;
+    }
+.table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+    .table td, .table th {
+        border: 1px solid #ddd;
+        padding: 8px;
+        text-align: left;
+    }
+
+    .table tr:nth-child(even) {
+        background-color: #f2f2f2;
+    }
+
+    .table tr:hover {
+        background-color: #ddd;
+    }
+
+    .table th {
+        background-color: black;
+        color: green;
+    }
+h4 {
+    font-style: italic;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+h5 {
+    font-style: italic;
+    font-family: 'Times New Roman', Times, serif;
+}
