--- a/WebApplication1/Views/AdminPanel/Add.cshtml
+++ b/WebApplication1/Views/AdminPanel/Add.cshtml
@@ -4,7 +4,7 @@
 
 <main>
     <div class="login-container">
-        <h2 class="login-title">Admin Panel</h2>
+        <h2 class="login-title">Add Products</h2>
 
         <form method="post" action="/AdminPanel/Add" enctype="multipart/form-data">
             <div class="form-group">
