--- a/WebApplication1/Views/Home/ContactUs.cshtml
+++ b/WebApplication1/Views/Home/ContactUs.cshtml
@@ -10,8 +10,8 @@
             
                 
                 <div class="col-lg-5 col-md-5 col-sm-12"   >
-                    
-                    <h1 style="font-family: 'Times New Roman', Times, serif; font-style: italic;margin-top: 100px; color:black;">CONTACT US</h1>
+
+                    <p class="welcome"style="margin-top:90px;">Contact Us</p>
                     <p style="font-style: italic; color:black;">If you want to contact us physically you can meet us at our original location 
                         this is the address of our store you can ask ask us any thing related to your pet health abd food.
                         
