--- a/WebApplication1/Views/AdminPanel/AllCustomers.cshtml
+++ b/WebApplication1/Views/AdminPanel/AllCustomers.cshtml
@@ -3,6 +3,11 @@
     Layout = "_AdminLayout";
 }
 
+
+<div class="text-center" style="margin-top:80px;">
+    <p class="welcome"> Customers</p>
+</div>
+
 <div class="container-fluid" style="margin-top:30px;">
     <table class="table table-responsive table-striped table-bordered" style="width:100%">
         <tbody>
