--- a/WebApplication1/Views/AdminPanel/Index.cshtml
+++ b/WebApplication1/Views/AdminPanel/Index.cshtml
@@ -3,6 +3,22 @@
     Layout = "_AdminLayout";
 }
 
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-6 col-md-3 col-sm-2"></div>
+
+        <div class="col-lg-5 col-md-7 col-sm-8">
+            <p class="welcome">All Products</p>
+
+        </div>
+
+        <div class="col-lg-2 col-md-2 col-sm-2"></div>
+
+    </div>
+
+</div>
+
 <div class="container-fluid" style="margin-top:30px;">
     <table class="table table-responsive table-striped table-bordered" style="width:100%">
         <tbody>
