--- a/WebApplication1/Views/Appointment/Add.cshtml
+++ b/WebApplication1/Views/Appointment/Add.cshtml
@@ -5,7 +5,7 @@
 <main style="margin-top: 100px ;">
     <div class="container d-flex justify-content-center mt-5" style="  border-radius: 20px; background-color:#f0f0f0; padding: 70px;">
         <div class="border rounded p-4" style="border-radius: 30px; width: 800px;">
-            <h2 class="text-center mb-4" style="color:white; font-style: italic; font-family: 'Times New Roman', Times, serif;background-color:#232323;height:50px; padding-top:5px; border-radius:15px">BOOK APPOINTMENT</h2>
+            <h2 class="contact-title">Book An Appointment</h2>
             <form method="post" action="/Appointment/Add">
                 
                 <div class="form-row">
