--- a/WebApplication1/Views/Appointment/MyAppointments.cshtml
+++ b/WebApplication1/Views/Appointment/MyAppointments.cshtml
@@ -1,18 +1,29 @@
 ﻿@model List<Appointment>
+
 @{
-    Layout = "_Adminlayout";
+	Layout = "Layout2";
 }
 
-<div class="text-center" style="margin-top:80px;">
-    <p class="welcome">Appoinments</p>
+
+<div class="container" style="margin-top:80px;">
+    <div class="row">
+        <div class="col-lg-4 col-md-3 col-sm-2"></div>
+
+        <div class="col-lg-6 col-md-7 col-sm-8">
+            <p class="welcome">Your Appointments</p>
+
+        </div>
+
+        <div class="col-lg-2 col-md-2 col-sm-2"></div>
+
+    </div>
+
 </div>
 
-<div style="margin-top: 20px;">
-
-    <div class="table-responsive">
-
-        <table class="table table-striped">
-            <thead>
+<div class="container-fluid" style="margin-top:90px; margin-bottom:150px;">
+    <table class="table table-responsive table-striped table-bordered" style="width:100%">
+        <tbody>
+        
                 <tr>
                     <th><h5>ID</h5></th>
                     <th><h5>Name</h5></th>
@@ -20,11 +31,10 @@
                     <th><h5>Pet Type</h5></th>
                     <th><h5>Preferred Date and Time</h5></th>
                     <th><h5>Reason</h5></th>
-                  
-                    <th><h5>Decline</h5></th>
-                    <th><h5>Done</h5></th>
+                    <th><h5>Email</h5></th>
+
                 </tr>
-            </thead>
+       
 
             @foreach (var app in Model)
             {
@@ -39,8 +49,7 @@
                         <td>@app.PetType</td>
                         <td>@app.preferredDateTime</td>
                         <td>@app.Reason</td>
-                        <td><a class="btn btn-outline-danger" href="@Url.Action("Delete", "Appointment", new { id =app.Id })">Decline</a></td>
-                        <td><a class="btn btn-outline-info" href="@Url.Action("Delete", "Appointment", new { id =app.Id })">Done</a></td>
+                        <td>@app.Email</td>
                     </tr>
                 </tbody>
 
@@ -51,8 +60,3 @@
     </div>
 
 </div>
-
-
-
-
-
