--- a/WebApplication1/Views/Home/AboutUs.cshtml
+++ b/WebApplication1/Views/Home/AboutUs.cshtml
@@ -2,14 +2,11 @@
 	Layout = "Layout2";
 }
 <main>
-    <div class="container">
-        <div class="row" style="padding-top: 0px;">
-            <div class="heading-container-aboutUs" style="justify-content: center;">
-                <p class="welcome" style="padding-left: 50PX;color:white;">ABOUT PAW PERFECT</p>
-            </div>
-        </div>
-    </div>
 
+
+    <div class="text-center" style="margin-top:80px;">
+        <p class="welcome">About Paw Perfect</p>
+    </div>
 
     <div class="container" style="margin-top: 60px;">
         <div class="row" style="justify-content: space-between;">
