--- a/WebApplication1/Views/Shared/Layout2.cshtml
+++ b/WebApplication1/Views/Shared/Layout2.cshtml
@@ -16,7 +16,7 @@
 <header>
   <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-            <a class="navbar-brand" href="#">PAW PERFECT</a>
+            <a class="navbar-brand" href="@Url.Action("Index","Home")">PAW PERFECT</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -25,19 +25,11 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="@Url.Action("Index","Home")">Home </a>
                     </li>
-                    <!-- Dropdown menu -->
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Cat Stuff
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="@Url.Action("Index","Order")">Sheba</a>
-                            <a class="dropdown-item" href="@Url.Action("Index","Order")">Fancy Feast</a>
-                            <div class="dropdown-divider">Dry Foods</div>
-                            <a class="dropdown-item" href="@Url.Action("Index","Order")">Mini Canned</a>
-                        </div>
+                  
+                    <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("Index", "Order")">Cat Stuff</a>
                     </li>
-                    <!-- End dropdown menu -->
+               
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Add", "Appointment")">Appointment</a>
                     </li>
@@ -49,27 +41,29 @@
                     </li>
                 </ul>
 
-                <!-- Profile Icon -->
+                
+           
+              
                 <ul class="navbar-nav">
+                    <!-- Profile Icon -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="profile-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="fas fa-user"></i>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profile-dropdown">
-                            <a class="dropdown-item" href="Identity/Account/Login">Login</a>
-                            <a class="dropdown-item" href="Identity/Account/Register">Register</a>
-                            <a class="dropdown-item" href="@Url.Action("MyOrder", "Home")">My Orders</a>
-                            <a class="dropdown-item" href="Identity/Account/Logout">Logout</a>
+                            <a class="dropdown-item font" href="@Url.Action("MyOrder", "Home")"> Orders</a>
+                            <a class="dropdown-item font" href="@Url.Action("MyAppointments", "Appointment")"> Appointments</a>
+                            <a class="dropdown-item font" href="Identity/Account/Login">login</a>
+                            <a class="dropdown-item font" href="Identity/Account/Register">register</a>
+                            <a class="dropdown-item font" href="Identity/Account/Logout">logout</a>
                         </div>
                     </li>
-                </ul>
+                    <!-- Add to Cart Icon -->
 
-                <!-- Add to Cart Icon -->
-                <ul class="navbar-nav">
                     <li class="nav-item" style="position: relative;">
                         <a class="nav-link" href="#" id="cart-dropdown" data-toggle="dropdown" style="position: relative;">
                             <i class="fa-solid fa-cart-shopping" style="font-size: 24px;"></i>
-                            <span class="cart-badge" id="cart-badge" style="position: absolute; top: -10px; right: -10px; background-color: red; color: #fff; padding: 5px 10px; border-radius: 50%; font-size: 12px;">0</span>
+                            <span class="cart-badge" id="cart-badge" style="position: absolute; top: -10px; right: -10px; background-color: red; color: #fff; padding: 5px 10px; border-radius: 50%; font-size: 12px;"> 0</span>
                             Cart
                         </a>
                         <div class="dropdown-menu cart-dropdown" aria-labelledby="cart-dropdown">
@@ -77,7 +71,7 @@
                             <div class="cart-summary">
                                 <!-- Cart items will be listed here -->
                             </div>
-                            <div class="cart-empty text-muted">Your cart is empty.</div>
+                    
                             <div class="cart-actions">
                                 <a href="@Url.Action("Cart", "Order")" class="btn btn-secondary btn-sm">View Cart</a>
                                 <a href="@Url.Action("Cart", "Order")" class="btn btn-secondary btn-sm">Checkout</a>
